# copenhelo

./: LICENSE  Makefile  README.md  dummy.html  leaderboard.html  log.txt  players.html  pyproject.toml  standings.html  tournaments.html
.github/: copilot-instructions.md
.github/workflows/: update-elo.yml
data from cool person/: r2 pairings.htm  r4 pairings.htm
data from cool person/0706/: EventLink - Standings for Faraos Cigarer Lyngby Pauper Tournament.htm  r1.htm  r3.htm
data from cool person/1210/: EventLink - Standings for Faraos Cigarer Lyngby Games Pauper Tournament.htm
data from cool person/1502/: EventLink - Standings for Faraos Cigarer Lyngby Pauper Tournament.htm
data from cool person/20260530- rounds/: EventLink - Standings for Pauper _FNM_.htm  r1.htm  r3.htm  r4.htm
data from cool person/2112/: EventLink - Standings for Faraos Cigarer Lyngby Games Pauper Tournament.htm
events/: 20260606_pauper_lyngby.json  20260621_pauper_lyngby.json  parsed_events.csv
final_standings_version/: ALGORITHM.md  README.md  elo_calculator.py  elo_from_standings.py  extract_standings.py  leaderboard_generator.py
input/: opt_in.csv
output/: .input-hash  index.html  players.json  tournaments.json
scripts/: elo_calculator.py  leaderboard_generator.py  parse_tournaments.py  players_generator.py  recalculate_history.py  tournaments_generator.py
tests/: __init__.py  conftest.py  test_elo_calculator.py  test_elo_calculator_final.py  test_leaderboard_generator.py  test_parse_tournaments.py  test_players_generator.py  test_privacy.py  test_tournaments_generator.py
(+223 files in other folders)
