[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copenhelo"
version = "0.1.0"
description = "ELO Rating Calculator for Tournaments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Copenhagen Pauper Community"}
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools]
packages = ["scripts"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long (handled by black)
